# Computational-Mathematics

./: .gitignore  LICENSE  README.md
colebrook-cpp/: Makefile
colebrook-cpp/include/: colebrook.h  methods.h  utils.h
colebrook-cpp/src/: colebrook.cpp  main.cpp  methods.cpp  utils.cpp
lorenz_system/: CMakeLists.txt  Makefile  lorenz.cfg
lorenz_system/include/: lorenz.hpp  rk23.hpp  rk38.hpp  rk4.hpp
lorenz_system/python/: config_reader.py  plot_attractor.py  plot_errors.py  plot_timeseries.py
lorenz_system/src/: lorenz.cpp  main.cpp  rk23.cpp  rk38.cpp  rk4.cpp
precise-euclidean-dist/: .editorconfig  Makefile  README.md  clang-format  main.cpp
precise-euclidean-dist/include/: compensated_sum.h  euclidean.h  gmp_reference.h  multiply.h  sqrt_refined.h  types.h  ulp_utils.h
precise-euclidean-dist/src/: compensated_sum.cpp  euclidean.cpp  gmp_reference.cpp  multiply.cpp  sqrt_refined.cpp  ulp_utils.cpp
precise-euclidean-dist/tests/: test_compensated_sum.cpp  test_euclidean_full.cpp  test_multiply.cpp  test_permutation.cpp  test_sqrt_refined.cpp
